# heimdall-dioxus

./: Cargo.toml
public/: style.css
src/: main.rs
src/components/: footer.rs  layout.rs  mod.rs
src/views/: decode_tx_view.rs  main_view.rs  mod.rs
