[package]
name = "heimdall-dioxus"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.25.0"
shuttle-runtime = "0.25.0"
tokio = "1.26.0"
heimdall = { git = "https://github.com/Jon-Becker/heimdall-rs" }
dioxus = { version = "*" }
dioxus-ssr = { version = "*" }
actix-files = "0.6.2"

